--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8765
+  port: ${SERVER_PORT}
 
 spring:
   application:
@@ -56,13 +56,12 @@ eureka:
     instanceId: ${spring.application.name}:${random.value}
   client:
     serviceUrl:
-      defaultZone:
-        - http://localhost:8761/eureka
+      defaultZone: ${DISCOVERY_SERVERS}
     healthcheck:
       enabled: true
 
 logging:
-  config: classpath:logback-stage.xml
+  config: classpath:logback-prod.xml
 
 management:
   endpoints:
@@ -78,4 +77,4 @@ management:
       show-details: always
 app:
   security:
-    cors-origins: http://localhost:5500, http://127.0.0.1:5500
+    cors-origins: ${CORS_ORIGINS}
